%%{init: {
  'theme': 'base',
  'themeVariables': {
    'primaryColor': '#E3F2FD',
    'primaryTextColor': '#1565C0',
    'primaryBorderColor': '#1976D2',
    'lineColor': '#42A5F5',
    'secondaryColor': '#F3E5F5',
    'tertiaryColor': '#E8F5E9',
    'fontSize': '14px',
    'fontFamily': 'ui-sans-serif, system-ui, sans-serif'
  }
}}%%
erDiagram
    Publishers {
        int PublisherID PK
        string PublisherName
        int YearOfPublication
    }
    Categories {
        int CategoryID PK
        string CategoryName
    }
    Authors {
        int AuthorID PK
        string FirstName
        string LastName
        string Biography
    }
    Readers {
        int UserID PK
        string FirstName
        string LastName
        string Email UK
        string PhoneNumber 
        string Address
        string JoinDate
    }
    Staffs {
        int StaffID PK
        string StaffName
        string LoginID UK
        string Password
        bool CanManageDigital
    }
    Books {
        string ISBN PK
        string Title
        string Edition
        decimal Price
        enum BookType
        int PublisherID FK
        int CategoryID FK
    }
    Book_Authors {
        string ISBN PK,FK
        int AuthorID PK,FK
    }
    Loans {
        int LoanID PK
        string ISBN FK
        int UserID FK
        int StaffID FK
        string IssueDate
        string DueDate
        string ReturnDate 
        enum Status
    }
    DigitalAssets {
        int AssetID PK
        string ISBN FK
        enum FileFormat 
        decimal FileSizeMB 
        string DownloadURL
        enum AccessLevel
    }
    DigitalAccessLogs {
        int AccessID PK
        int UserID FK
        int AssetID FK
        string AccessTimestamp
        string IPAddress
    }

    Books }o--o| Publishers : "published by"
    Books }o--o| Categories : "belongs to"
    Books }o--o{ Authors : "written by"
    Loans }o--|| Books : "references"
    Loans }o--|| Readers : "borrowed by"
    Loans }o--|| Staffs : "processed by"
    DigitalAssets }o--|| Books : "digital version of"
    DigitalAccessLogs }o--|| Readers : "accessed by"
    DigitalAccessLogs }o--|| DigitalAssets : "logs access to"